some more dark mode fixes

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,7 +3,7 @@
 body {
   color: @dark;
   background-color: white;
-  transition: all 0.3s ease-in-out;
+  // transition: all 0.3s ease-in-out;
 }
 
 ::selection {
